--- a/InfinityScript plugin/b3helper/b3helper.csproj
+++ b/InfinityScript plugin/b3helper/b3helper.csproj
@@ -29,11 +29,10 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="InfinityScript">
-      <HintPath>bin\Debug\InfinityScript.dll</HintPath>
+      <HintPath>D:\TeknoMW3\InfinityScript.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,13 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AntiKnife.cs" />
-    <Compile Include="ChatAlias.cs" />
-    <Compile Include="Isnipe.cs" />
     <Compile Include="Main.cs" />
-    <Compile Include="ProcessCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
